support unity 3d 5 webplay

--- a/SmartThreadPool/SmartThreadPoolMono.csproj
+++ b/SmartThreadPool/SmartThreadPoolMono.csproj
@@ -57,6 +57,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="SLExt.cs" />
+    <Compile Include="Stopwatch.cs" />
     <Compile Include="WorkItem.WorkItemResult.cs" />
     <Compile Include="CallerThreadContext.cs" />
     <Compile Include="CanceledWorkItemsGroup.cs" />
